# napierEvolutionaryRobotics

./: .gitignore  build.sh  install_script_gecco21_leni_ARE.sh  launch.sh  parameters.csv
experiment_scripts/: saved_time.py
experiments/: CMakeLists.txt
experiments/mnipes/: CMakeLists.txt  M_NIPES.cpp  cmaes_learner.cpp  parameters.csv  tools.cpp  tools.hpp
experiments/nipes/: CMakeLists.txt  NIPES.cpp  NIPES.hpp  parameters.csv  tools.cpp
scrips/: runtime_with_respect_to_maxevaltime.py
scrips/src/: UpdateParameter.py
scripts/: are-parallel.job  experiment_ranks.py  plot_fitness_over_time.py  runtime_with_respect_to_maxevaltime.py
scripts/utils/: UpdateParameter.py  functionsForcsvPlots.py
